More finishing touches

--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -19,8 +19,7 @@
   <aside class="notes">
     <p>
       Invented by a British pianist, the game is set as a murder
-      mystery which takes place at a dinner party held at the Grand
-      Tudor Mansion. The game was originally called Murder, but Hasbro
+      mystery which takes place at a fancy dinner party. The game was originally called Murder, but Hasbro
       Entertainment thought that a little provocative, and thus they
       chose Cluedo, a portmanteau of the words Clue and Ludo.
     </p>
@@ -179,9 +178,9 @@
   <img src="./media/notes.png" />
   <aside class="notes">
     <p>
-      In the world of Cluedo, the victor is decided principally by the
+      But in the world of Cluedo, the victor is decided principally by the
       one who takes the best notes. This game is all about note
-      taking. Players come up with vast and comprehensive note taking
+      taking. Players come up with vast and comprehensive
       sheets in order to gain an edge. I found this particular sheet
       on an individual's Cluedo fan site, and comes with the catch
       phrase: "Beat and enrage your family and friends through logical
