--- a/MelbDjango/cluedo/slides/0060_performance.html
+++ b/MelbDjango/cluedo/slides/0060_performance.html
@@ -115,7 +115,7 @@
       top-most performance cost. In a moment I'm going to hand out
       some cards and pens, and your challenge will be to guess as
       close as possible to the contents of this envelope by writing
-      down three things on the cards.
+      down three things.
     </p>
   </aside>
 </section>
@@ -201,7 +201,8 @@
     <p>
       Finally, you need to write specifically what you think it is
       that has caused the performance problem. Be as specific as you
-      like here, and at the end of the talk we'll see who is the closest to the correct answer.
+      like here, and at the end of the talk we'll see who is the closest to the correct answer, and
+      they'll be taking home that copy of Cluedo.
     </p>
   </aside>
 </section>
@@ -257,11 +258,6 @@
       rows, and then finally write down your specific guess on what
       the cause of the performance cost might be.
     </p>
-    <p>
-      I'll give you a little time to write down your guesses and
-      return them to the front. Also, please don't forget to write
-      your name on the card.
-    </p>
   </aside>
 </section>
 
@@ -281,7 +277,7 @@
       can be particularly slow. Interestingly that example is actually
       one of the other performance issues we found outside of the top three; it was taking
       about 100ms in total to perform URL reverse lookups on each returned Django
-      model. The lession there, is be careful where, and how often you use URL reverses.
+      model. The lesson there, is be careful where, and how often you use URL reverses.
     </p>
   </aside>
 </section>
