--- a/MelbDjango/cluedo/slides/0070_flamegraph.html
+++ b/MelbDjango/cluedo/slides/0070_flamegraph.html
@@ -149,7 +149,8 @@
       to examine. This is the strength of flamegraphs; they make clear
       the specific locations in your source code, both file and
       line-number, that are candidates for performance examination but in
-      an intuitive representation.
+      an intuitive representation. It was certainly key in leading us to the
+      villians that had caused our issues at Uptick.
     </p>
   </aside>
 </section>
