--- a/MelbDjango/cluedo/slides/0020_title.html
+++ b/MelbDjango/cluedo/slides/0020_title.html
@@ -9,19 +9,19 @@
 </div>
 <aside class="notes">
   <p>
-    Hello everyone, thank you all for having me this evening, especially while
-    I'm dressed as Cololnel Mustard. There is really something about holding a pipe
-    while delivering a talk, you must try it.
+    Hello everyone, and thank you to MelbDjango for having me this
+    evening. My name's Luke, or Colonel Mustard, and I'm the CTO at a
+    startup company called Uptick.
   </p>
   <p>
     This talk is about two things very dear to me: excessively
     worrying about software performance, and the classic 1940s murder
-    mystery boardgame, Cluedo. At Uptick we found that one of our
-    products had developed a severe performance issue. After some
-    digging around in the supporting Django libraries we use, I found some
-    pretty interesting/alarming results. So I'll be talking a bit
-    about our products, the libraries we use, and the tool leveraged
-    to dig into the performance issue.
+    mystery boardgame, Cluedo. At Uptick we found that one of our products had
+    developed a severe performance issue. After some digging around in
+    the supporting Django libraries we use, I found some pretty
+    interesting/alarming results. So I'll be talking a bit about our
+    products, the libraries we use, and the tool leveraged to dig into
+    the performance issue.
   </p>
   <p>
     The marriage of Cluedo with this talk, in addition to my clothing,
@@ -30,6 +30,6 @@
     cause of our performance issue was, and we'll be giving away a
     prize to the closest guess. That prize is this here copy of
     Cluedo, provided by CommonCode, so thanks to CommonCode, and in particular
-    Bec for doing the legwork!
+    Bec for doing the legwork, so if we could just give her a round of applause...
   </p>
 </aside>
