--- a/MelbDjango/cluedo/slides/0040_cluedo.html
+++ b/MelbDjango/cluedo/slides/0040_cluedo.html
@@ -7,7 +7,7 @@
       would seem that Christmas is Cluedo's time to shine, since 2004
       at least. Given we're in November, this is statistically almost
       the perfect time for a Cluedo themed talk. But for those who
-      perhaps aren't so familiar with Cluedo, let's start with a brief
+      perhaps aren't so familiar, let's start with a brief
       refresher.
     </p>
   </aside>
@@ -100,7 +100,10 @@
   </div>
   <aside class="notes">
     <p>
-      The third deck is that of the murder weapons. TODO
+      The third deck is that of the murder weapons. I've always been a
+      little curious about the inclusion of the candlestick in this
+      list. But, it turns out there have in fact been reports, even
+      modern reports, of homicides by candlestick, so there you go.
     </p>
   </aside>
 </section>
